package com.ofdun.jobfinder.cli.dto.common;

public record Category(Long id, String name) {}
